# axum-chat

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20230216002128_create_users_table.up.sql  20230217000337_create_follows_table.down.sql  20230217000337_create_follows_table.up.sql  20230217013652_create_rooms_table.down.sql  20230217013652_create_rooms_table.up.sql  20230217013754_create_room_members_table.down.sql  20230217013754_create_room_members_table.up.sql  20230218012708_create_messages_table.down.sql  20230218012708_create_messages_table.up.sql
seeds/: insert_users.sql
src/: constants.rs  errors.rs  jwt.rs  main.rs  request.rs  validator.rs
src/controllers/: accounts.rs  mod.rs  root.rs
src/entities/: account.rs  messages.rs  mod.rs  room_members.rs  rooms.rs  user.rs  users.rs
src/handlers/: auth.rs  messages.rs  mod.rs  rooms.rs  users.rs  ws.rs
src/repositories/: follow.rs  message.rs  mod.rs  room.rs  room_member.rs  user.rs
src/services/: accounts.rs  messages.rs  mod.rs  php.rs
src/stores/: accounts.rs
src/views/: message.rs  user.rs
ui/: .prettierrc  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/components/: FooterMenuBar.tsx  MenuBar.tsx  Message.tsx  Modal.tsx  NameInputModal.tsx  ProtectedRoute.tsx
ui/src/components/Auth/: Button.tsx  LoginForm.tsx  LoginMethodDivider.tsx  SignUpForm.tsx  TextInputWithLabel.tsx
ui/src/components/Forms/: Button.tsx  Input.tsx  TextInputWithLabel.tsx
ui/src/components/Friends/: Header.tsx  Item.tsx  List.tsx  ProfileCard.tsx  index.tsx
ui/src/components/Icons/: ArrowRightCircleIcon.tsx  ChatBubbleBottomCenterTextIcon.tsx  ChatBubbleOvalLeftEllipsisIcon.tsx  LogoutIcon.tsx  SearchIcon.tsx  SettingIcon.tsx  UserPlusIcon.tsx  UsersIcon.tsx
ui/src/components/Setting/: Form.tsx  Header.tsx  index.tsx
ui/src/components/SideBar/: Header.tsx  TalkRoomCategory.tsx  TalkRoomList.tsx  index.tsx
ui/src/components/Talk/: TalkForm.tsx  TalkRoomInfo.tsx  index.tsx
ui/src/context/: AuthContext.tsx
ui/src/hooks/: useAuth.ts
ui/src/pages/: chat-for-mobile.tsx  chat-for-pc.tsx  chat.tsx  login.tsx  signup.tsx
ui/src/types/: type.ts
ui/src/utils/: axios.ts  date.ts  style.ts
(+6 files in other folders)
