[package]
name = "axum-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["ws", "headers"] }
axum-extra = { version = "0.5.0", features = ["cookie"] }
tokio = { version = "1.0", features = ["macros"] }
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
derivative = "2.2.0"
chrono = "0.4.23"
uuid = "1.3.0"
async-session = "3.0.0"
async-sqlx-session = { version = "0.4.0", features = ["pg"] }
sha2 = "0.10.6"
serde_json = "1.0.93"
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
axum-macros = "0.3.4"
validator = { version = "0.16.0", features = ["derive"] }
